Modules/ARM/NetworkSecurityGroups/deploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "NSGNAME": {
            "defaultValue": "<Enter NSG Name>",
            "type": "string",
            "metadata": {
                "description": "Standard: BusinessUnit-Environment-SiteCode-Function-Suffix || Example: CDNRMT-D-NA24-BUS-NSG"
            }
        },
        "location": {
            "type": "string",
            "allowedValues": [
                "East US 2",
                "East US",
                "West Central US",
                "West US 2",
                "Central US",
                "Canada East",
                "Canada Central",
                "West Europe",
                "North Europe",
                "UK West",
                "UK South",
                "Southeast Asia",
                "East Asia"
            ],
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "LocalSubnet": {
            "defaultValue": "<Enter the subnet the NSG will be attached to>",
            "type": "string",
            "metadata": {
                "description": "Example: 10.206.1.1"
            }
        }
    },
    "variables": {
        "networkSecurityGroupName": "[parameters('NSGNAME')]",
        "subnetName": "[parameters('LocalSubnet')]"
    },
    "resources": [
        {
            "apiVersion": "2017-06-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('networkSecurityGroupName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowRDPInbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Allows inbound RDP to servers.",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "10.0.0.0/8",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowSCCMPatchingTcpInbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Allows SCCM servers access for patching and monitoring",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "10.0.0.0/8",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "80",
                                "135",
                                "139",
                                "443",
                                "445",
                                "2701",
                                "5723",
                                "5724",
                                "8530-8531",
                                "10123",
                                "49152-65535"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowWinRMInbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Allows inbound WinRM to servers.",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "10.0.0.0/8",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "5985",
                                "5986"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowLocalSubnetInbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Allows traffic within the local subnet to freely flow",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('localsubnet')]",
                            "destinationAddressPrefix": "[parameters('localsubnet')]",
                            "access": "Allow",
                            "priority": 4050,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowDomainControllersTcpOutbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Allows outbound TCP traffic to listed Corporate domain controllers.",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "53",
                                "88",
                                "135",
                                "139",
                                "389",
                                "445",
                                "464",
                                "636",
                                "1025",
                                "3268-3269",
                                "5100-5600",
                                "5722",
                                "9389",
                                "49152-65535"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": [
                                "10.71.0.0/16",
                                "10.1.0.0/16",
                                "10.10.0.0/16",
                                "10.64.0.0/14",
                                "10.188.0.0/14",
                                "10.228.0.0/16",
                                "10.80.200.0/21",
                                "10.230.0.0/16",
                                "10.206.0.0/16"
                            ]
                        }
                    },
                    {
                        "name": "AllowDomainControllersUdpOutbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Allows outbound UDP traffic to listed Corporate domain controllers.",
                            "protocol": "Udp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "53",
                                "88",
                                "123",
                                "135",
                                "137-139",
                                "389",
                                "445",
                                "464",
                                "3268-3269",
                                "5100-5600",
                                "5722",
                                "9389",
                                "49152-65535"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": [
                                "10.71.0.0/16",
                                "10.1.0.0/16",
                                "10.10.0.0/16",
                                "10.64.0.0/14",
                                "10.188.0.0/14",
                                "10.228.0.0/16",
                                "10.80.200.0/21",
                                "10.230.0.0/16",
                                "10.206.0.0/16"
                            ]
                        }
                    },
                    {
                        "name": "AllowAzureKmsOutbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Allows outbound traffic to listed Azure KMS servers.",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1688",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "23.102.135.246",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternalKmsOutbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Allows outbound traffic to listed Corporate KMS servers.",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1688",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 400,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": [
                                "10.71.20.25",
                                "10.189.15.160",
                                "10.165.14.105"
                            ]
                        }
                    },
                    {
                        "name": "AllowWebOutbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Allows outbound traffic on ports 80 and 443.",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "80",
                                "443"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowSCCMPatchingTcpOutbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Allows access to SCCM server for patching",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "10.0.0.0/8",
                            "access": "Allow",
                            "priority": 600,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "80",
                                "135",
                                "139",
                                "443",
                                "445",
                                "2701",
                                "5723",
                                "5724",
                                "8530-8531",
                                "10123",
                                "49152-65535"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowLocalSubnetOutbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Allows traffic within the local subnet to freely flow",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('localsubnet')]",
                            "destinationAddressPrefix": "[parameters('localsubnet')]",
                            "access": "Allow",
                            "priority": 4050,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "TaniumCetPsDeployTcpOutbound",
                        "properties": {
                            "description": "Allows the Tanium agent to communicate with WTW Tanium servers",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 700,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "22",
                                "443",
                                "445",
                                "17449",
                                "17472",
                                "17475",
                                "17486"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": [
                                "10.165.13.48",
                                "10.165.13.49",
                                "10.189.13.11",
                                "10.189.13.12",
                                "13.67.42.163",
                                "13.76.95.50",
                                "13.81.207.73",
                                "40.75.4.103",
                                "52.174.120.235",
                                "52.247.48.133"
                            ]
                        }
                    },
                    {
                        "name": "AllowICMPInbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Default rule to allow ICMP traffic inbound.",
                            "protocol": "ICMP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 4060,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Default rule to deny traffic.",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4070,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowICMPOutbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Default rule to allow ICMP traffic outbound.",
                            "protocol": "ICMP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 4060,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutbound",
                        "etag": "W/\"41e4ec5e-abcc-405f-8352-08028b2a4312\"",
                        "properties": {
                            "description": "Default rule to deny traffic.",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4070,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        }
    ]
}
